WS receiving working